# HW-NAS-Visualization

./: .gitignore  00_export_hwnas.ipynb  01_visualize_hwnas.ipynb  02_accuracy_results.ipynb  CheckHWNAS.py  MemoryGenerator.py  MemoryGeneratorppq.py  MemoryGeneratorppqfromidxseed.py  MissingJobsppq.py  README.md  callespidf.sh  convert_to_csv.py  getFileSize.py  memory_results.csv  model_sizes.csv  nativemodels.txt  output.json  requirements.txt  result.csv  runSingleExperiment.sh  runSingleespidf.sh  slurm_espidf.sh  slurm_job_parallel_gnu.sh  visualize.ipynb
TinyModels/: sdkconfig
TinyModels/main/: CMakeLists.txt  app_main.cpp
TinyModels/main/models/s3/: model1651.espdl  model3043.espdl
intermediateresults/: datathings.py  result.csv  showmemacc.ipynb
restjobs/: calcmissingjobs.py  missing_cifar10.txt
results/: accuracy_results.csv  alldata.csv  memory_results.csv  model_sizes.csv  result.csv  results_merged.csv  showmemacc.ipynb
tflitetemplate/: tflitetemplate.ino
